hphp/hack/test/enum_atom/atom_generic_validation.php.exp
File "atom_generic_validation.php", line 14, characters 37-52:
The type TEnum must be a type constant or a reified generic in order to be used with __Atom (Typing[4395])
File "atom_generic_validation.php", line 41, characters 40-67:
The type \Controller::TEnum must be a type constant or a reified generic in order to be used with __Atom (Typing[4395])
File "atom_generic_validation.php", line 41, characters 59-63:
An abstract type constant is not allowed in this position. (Typing[4352])
  File "atom_generic_validation.php", line 23, characters 23-27:
  `TEnum` is abstract here.
